Fix legend wrap on IE11

--- a/src/applications/appeals/10182/sass/10182-nod.scss
+++ b/src/applications/appeals/10182/sass/10182-nod.scss
@@ -127,6 +127,10 @@ dl.review {
  _:-ms-fullscreen, :root dl.review dd.widget-content.widget-edit .widget-content-wrap {
   width: calc(100% - 125px); /* 125px ~= width of the edit button x2 */
 }
+/* IE11 fix legend not wrapping on small screens */
+legend.schemaform-block-title {
+  width: 100%;
+}
 
 .additional-issues {
   .schemaform-label,
